# cmuggui

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
src/cmuggui/: buttonrefactor.py  cmuggui.py
tests/: rotate  rotate.py  rotate_and_translate.py  test.py  translate.py
