[build-system]
requires = [
  "setuptools >= 77.0.3"
]
build-backend = "setuptools.build_meta"

[project]
name = "cmuggui"
version = "0.0.4"
authors = [
  { name="5Stygian", email="rlcrafistohard@gmail.com" },
]
description = "A library for making GUIs in CMU Graphics"
readme = "README.md"
requires-python = ">=3.12.1"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "CC0-1.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/5stygian/cmuggui"
Issues = "https://github.com/5stygian/cmuggui/issues"
Documentation = "cmuggui-docs.netlify.app/"